# story

./: .gitignore  404.html  android-build.yml  blog.html  docusaurus.config.ts  index.html  markdown-page.html  package-lock.json  package.json  sitemap.xml
.github/workflows/: android-build-test.yml  android-build.yml  macos-m1-build.yml
app/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/db/: chapter.csv  chapter.sql  contents.sql  roles.csv  roles.sql  stage.csv  story.csv  story.sql  words.csv  words.sql
app/src/: App.css  App.tsx  constants.ts  main.tsx  test.tsx  utils.ts
app/src-tauri/: .env  .env.production  Cargo.toml  cargo.config  diesel.toml  rust-analyzer.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  local.rs  main.rs  proxy.rs  server.rs
app/src-tauri/src/sqlite_db/: chapter.rs  content.rs  mod.rs  role.rs  story.rs
app/src-tauri/temp/: lib.rs  main.rs  schema.rs  temp  temp2
app/src-tauri/temp/db/: mod.rs  my_friend_entity.rs  my_friend_service.rs
app/src-tauri/temp/postgres_db/: chapter.rs  content.rs  db.rs  story.rs
app/src-tauri/temp/sqlite_db/: chapter.rs  content.rs  db.rs  mod.rs  story.rs
assets/js/: 0e384e19.dd1ac920.js  11058424.aca45c93.js  14eb3368.5c7d570d.js  17896441.ecf73c39.js  183f875c.9140b70d.js  18c41134.d7a3ef81.js  (+32 more)
blog/: archive.html  atom.xml  authors.html  first-blog-post.html  long-blog-post.html  mdx-blog-post.html  rss.xml  tags.html  welcome.html
docs/: intro.html
src-tauri/: tauri.conf.json
(+111 files in other folders)
