[package]
name = "story"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "story_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
tauri = { version = "2.0.6", features = [] }
tauri-plugin-shell = "2.0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1.10.6"
postgres = {version = "0.19.8", features = ["with-serde_json-1"] }
tauri-plugin-clipboard-manager = "2.0.1"
tauri-plugin-persisted-scope = "2.0.0"
chrono = "0.4.38"
tauri-plugin-dialog = "2.0.3"
tauri-plugin-fs = "2.0.3"
rusqlite = { version = "0.32.1", features = ["bundled"] }
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
lazy_static = "1.5.0"
dotenvs = "0.1.0"
tauri-plugin-store = "2"
tokio = "1.44.1"
warp = "0.3.7"
reqwest = "0.12.14"
scraper = "0.23.1"
html5ever = "0.30.0"

[net]
git-fetch-with-cli = true


[source]
replace-with = 'original'

[source.original]
registry = "https://github.com/rust-lang/crates.io-index"

